tests/config_module_system_node_resolve_dirname/config_module_system_node_resolve_dirname.exp
Error: custom_resolve_dir/testproj/index.js:5
  5: ("Flow checks custom dir": number)
      ^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
  5: ("Flow checks custom dir": number)
                                ^^^^^^ number

Error: subdir/sublevel.js:5
  5: (name: "node_modules/testproj2"); // Error: Resolve from sibling 'custom_resolve_dir' first!
      ^^^^ string literal `subdir/custom_resolve_dir/testproj2`. Expected string literal `node_modules/testproj2`, got `subdir/custom_resolve_dir/testproj2` instead
  5: (name: "node_modules/testproj2"); // Error: Resolve from sibling 'custom_resolve_dir' first!
            ^^^^^^^^^^^^^^^^^^^^^^^^ string literal `node_modules/testproj2`

Error: toplevel.js:6
  6: (name: "custom_resolve_dir/testproj"); // Error: Resolve from node_modules first!
      ^^^^ string literal `node_modules/testproj`. Expected string literal `custom_resolve_dir/testproj`, got `node_modules/testproj` instead
  6: (name: "custom_resolve_dir/testproj"); // Error: Resolve from node_modules first!
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string literal `custom_resolve_dir/testproj`


Found 3 errors
